<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".TskActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tb_tsk"
                    style="?textSmall"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:theme="@style/AppTheme.AppBarOverlay"
                    app:contentInsetStart="0dp"
                    app:title=" ">

                    <ImageButton
                        android:id="@+id/ib_tsk_mainmenu"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/background_transparent"
                        android:elevation="1dp"
                        app:srcCompat="@mipmap/ic_mainmenu" />

                    <TextView
                        style="?textTitle"
                        android:text="@string/header_tsk" />

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_tsk1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/action_refresh_tsk1"/>

            <ImageView
                android:id="@+id/ImageView08"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/splitter_horisontal" />

            <Button
                android:id="@+id/bt_tsk2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/action_refresh_tsk2"/>

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/splitter_horisontal" />

            <Button
                android:id="@+id/bt_tsk0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/action_refresh_tsk0"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_mesitem_filetype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/splitter_vertical" />

        <ListView
            android:id="@+id/lv_tsk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>